<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_StateConveyor" Id="{ac5350ca-9183-4d87-ae09-b58457bee4bd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_StateConveyor :
(
    C_INIT := 0,
	C_NORMAL := 10,
    C_INIT_PROCESS := 90,
    C_PURPLE_BACK := 100,
    C_PURPLE_FORWARD := 110,
    C_ORANGE_BACK := 120,
    C_ORANGE_FORWARD := 130,
    C_YELLOW_BACK := 140,
    C_YELLOW_FORWARD := 150,
    C_BLUE_BACK := 160,
    C_BLUE_FORWARD := 170
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>